<resources>
    <string name="app_name">CGPA-GPA calculator</string>
    <string name="GPA_opening_textView">Input subject &amp; acquired marks</string>
    <string name="CGPA_opening_textView">Input subject,credit &amp; GPA per subject</string>
    <string name="GPA_opening_subjet">Subject</string>
    <string name="GPA_opening_number">Number</string>
    <string name="CGPA_opening_credit">Credit</string>
    <string name="CGPA_opening_gpa">GPA</string>
    <string name="CGPA_opening_cgpaTV"> CGPA =</string>


</resources>
